<resources>
    <string name="app_name">Lab 4.4</string>
    <string name="action_settings">Settings</string>
    <string name="code">Code</string>
    <string name="title">Title</string>
    <string name="credit">Credit</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
</resources>
